// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentStatusCell renders 1`] = `
<tr>
  <td>
    Member
  </td>
</tr>
`;

exports[`CurrentStatusCell renders as a non-member 1`] = `
<tr>
  <td>
    Non-member
  </td>
</tr>
`;
